<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarCaja">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearMostrarCaja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/ScrollView_Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

            </ScrollView>

            <TextView
                android:id="@+id/TextViewProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k2d_light"
                android:text="Elementos Cargados"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMostrarCajas"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <CheckBox
                android:id="@+id/CheckBoxDonacionONo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:buttonTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/para_donacion"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/volverMostrarCaja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/k2d_light"
                    android:text="@string/volver" />

                <Button
                    android:layout_marginLeft="10dp"
                    android:id="@+id/eliminarElemMostrarCaja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/k2d_light"
                    android:text="@string/eliminar_elemento" />

            </LinearLayout>

            <Button
                android:id="@+id/cerrarCajaMostrarCaja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/k2d_light"
                android:text="@string/cerrar_caja" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearMostrarCaja">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/logo_colores" />
        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>