<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayoutIngDatTec"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLay1IngDatosTec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbarIngDatTec"
                layout="@layout/toolbar" />

            <ScrollView
                android:id="@+id/ScrollViewIngDatosTec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/LinearLay2IngDatosTec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:fontFamily="@font/k2d_light"
                        android:text="@string/datos_de_implementacion"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/datos_tecnico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:baselineAligned="false"
                        android:fontFamily="@font/k2d_light"
                        android:text="@string/datos_del_tecnico"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/nombreTecnico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/nombre"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_nombre_tecnico"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:hint="Ingrese su nombre"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/apellido_tecnico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/apellido"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_apellido_tecnico"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:hint="Ingrese su apellido"
                        android:inputType="textPersonName"
                        android:maxLength="25"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dniTecnico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/dni"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_dni_tecnico"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:hint="Ingrese su DNI"
                        android:inputType="number"
                        android:maxLength="8"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/nroCelularTecnico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/numero_de_contacto"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_nro_celular_tecnico"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/ingrese_su_numero_de_celular"
                        android:inputType="number"
                        android:maxLength="11"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/nombreEmpresa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="NOMBRE DE LA EMPRESA"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_nombreEmpresa"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:hint="Ingrese el nombre de la empresa"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/datos_implementacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15sp"
                        android:layout_marginBottom="15dp"
                        android:baselineAligned="false"
                        android:fontFamily="@font/k2d_light"
                        android:text="@string/implementacion"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/responsable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/responsable"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/edit_responsable"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/nro_implementacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/numero_de_implementacion"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_nro_implementacion"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/ingrese_el_numero_de_implementacion"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/cantCajas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/ibm_plex_sans_hebrew_light"
                        android:text="@string/cantidad_de_cajas_para_usar"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/edit_cantidad_cajas"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/text_inicio"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                    <Button
                        android:id="@+id/siguiente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/k2d_light"
                        android:text="@string/siguiente"
                        android:textStyle="bold" />
                </LinearLayout>

            </ScrollView>
        </LinearLayout>


        <ImageView
            android:layout_below="@+id/LinearLay1IngDatosTec"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/logo_colores" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_ingresar_datos_usuario"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu"/>

</androidx.drawerlayout.widget.DrawerLayout>